<resources>
    <string name="app_name">Open Weather</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet">You are not connected to the Internet</string>
    <string name="connected">You are connected to the Internet! Update this page</string>
    <string name="no_city">Wrong city name</string>
    <string name="not_success">Your response code is not success</string>
    <string name="enter_city">Enter your city</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="location_disabled">Your location is disabled</string>
</resources>
